tests/ui/conditional-compilation/cfg_accessible.stderr
error[E0425]: cannot find value `ExistingPrivate` in this scope
  --> $DIR/cfg_accessible.rs:52:5
   |
LL |     ExistingPrivate;
   |     ^^^^^^^^^^^^^^^ not found in this scope
   |
note: unit struct `m::ExistingPrivate` exists but is inaccessible
  --> $DIR/cfg_accessible.rs:5:5
   |
LL |     struct ExistingPrivate;
   |     ^^^^^^^^^^^^^^^^^^^^^^^ not accessible

error[E0425]: cannot find value `NonExistingPrivate` in this scope
  --> $DIR/cfg_accessible.rs:53:5
   |
LL |     NonExistingPrivate;
   |     ^^^^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find value `NonExistingTraitAlias` in this scope
  --> $DIR/cfg_accessible.rs:54:5
   |
LL |     NonExistingTraitAlias;
   |     ^^^^^^^^^^^^^^^^^^^^^ not found in this scope

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0425`.
